--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,15 +16,15 @@
             <a class="btn btn-lg btn-secondary" href="/users/new">회원 가입</a>
             <a class="btn btn-lg btn-secondary" href="/users">회원 목록</a>
         </p>
-        <p class="lead">상품 기능</p>
+        <p class="lead">프로젝트</p>
         <p>
-            <a class="btn btn-lg btn-dark" href="/items/new">상품 등록</a>
-            <a class="btn btn-lg btn-dark" href="/items">상품 목록</a>
+            <a class="btn btn-lg btn-dark" href="/projects/new">프로젝트 등록</a>
+            <a class="btn btn-lg btn-dark" href="/projects">프로젝트 목록</a>
         </p>
-        <p class="lead">주문 기능</p>
+        <p class="lead">제안서</p>
         <p>
-            <a class="btn btn-lg btn-info" href="/order">상품 주문</a>
-            <a class="btn btn-lg btn-info" href="/orders">주문 내역</a>
+            <a class="btn btn-lg btn-info" href="/proposals/new">제안서 등록</a>
+            <a class="btn btn-lg btn-info" href="/proposals">주문 내역</a>
         </p>
     </div>
 <!--    <div th:replace="fragments/footer :: footer" />-->
