pdf 다운로드 기능 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -24,7 +24,7 @@
         <p class="lead">제안서</p>
         <p>
             <a class="btn btn-lg btn-info" href="/proposals/new">제안서 등록</a>
-            <a class="btn btn-lg btn-info" href="/proposals">주문 내역</a>
+            <a class="btn btn-lg btn-info" href="/proposals">제안서 검색</a>
         </p>
     </div>
 <!--    <div th:replace="fragments/footer :: footer" />-->
