고객사 화면 및 기능 및 테스트코드 전부 추가

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -16,6 +16,11 @@
             <a class="btn btn-lg btn-secondary" href="/users/new">회원 가입</a>
             <a class="btn btn-lg btn-secondary" href="/users">회원 목록</a>
         </p>
+        <p class="lead">고객사</p>
+        <p>
+            <a class="btn btn-lg btn-dark" href="/customers/new">고객사 등록</a>
+            <a class="btn btn-lg btn-dark" href="/customers">고객사 목록</a>
+        </p>
         <p class="lead">프로젝트</p>
         <p>
             <a class="btn btn-lg btn-dark" href="/projects/new">프로젝트 등록</a>
