--- a/src/main/resources/templates/projects/createProjectForm.html
+++ b/src/main/resources/templates/projects/createProjectForm.html
@@ -10,16 +10,16 @@
 
 <div class="container">
 
-    <form role="form" action="/projects/new" th:object="${projectForm}" method="post">
+    <form role="form" action="/projects/new" th:object="${createProjectForm}" method="post">
         <div class="form-group">
             <label th:for="projectName">프로젝트명</label>
             <input type="text" th:field="*{projectName}" class="form-control" placeholder="사번을 입력하세요"
                    th:class="${#fields.hasErrors('projectName')}? 'form-control fieldError' : 'form-control'">
             <p th:if="${#fields.hasErrors('projectName')}" th:errors="*{projectName}">Incorrect date</p>
-            <label th:for="name">고객사명</label>
-            <input type="text" th:field="*{customer}" class="form-control" placeholder="이름을 입력하세요"
-                   th:class="${#fields.hasErrors('customer')}? 'form-control fieldError' : 'form-control'">
-            <p th:if="${#fields.hasErrors('customer')}" th:errors="*{customer}">Incorrect date</p>
+<!--            <label th:for="name">고객사명</label>-->
+<!--            <input type="text" th:field="*{customer}" class="form-control" placeholder="이름을 입력하세요"-->
+<!--                   th:class="${#fields.hasErrors('customer')}? 'form-control fieldError' : 'form-control'">-->
+<!--            <p th:if="${#fields.hasErrors('customer')}" th:errors="*{customer}">Incorrect date</p>-->
 
         </div>
 
