--- a/src/main/resources/templates/projects/projects.html
+++ b/src/main/resources/templates/projects/projects.html
@@ -21,16 +21,18 @@
         <table class="table table-striped">
             <thead>
             <tr>
-                <th>프로젝트명</th>
-                <th>고객사</th>
                 <th>고객사 유형</th>
+                <th>고객사</th>
+                <th>프로젝트명</th>
+                <th>프로젝트년도</th>
             </tr>
             </thead>
             <tbody>
             <tr th:each="project : ${projects}">
-                <td th:text="${project.projectName}"></td>
-                <td th:text="${project.customer?.customerName}"></td>
                 <td th:text="${project.customer?.customerType?.text}"></td>
+                <td th:text="${project.customer?.customerName}"></td>
+                <td th:text="${project.projectName}"></td>
+                <td th:text="${project.projectYear}"></td>
             </tr>
             </tbody>
         </table>
