user 정보 업데이트

--- a/src/main/resources/templates/users/users.html
+++ b/src/main/resources/templates/users/users.html
@@ -4,7 +4,7 @@
 <body>
 
 <div class="container">
-<!--    <div th:replace="fragments/bodyHeader :: bodyHeader" />-->
+    <div th:replace="fragments/bodyHeader :: bodyHeader" />
     <div>
         <table class="table table-striped">
             <thead>
@@ -25,10 +25,7 @@
             </tbody>
         </table>
     </div>
-
-<!--    <div th:replace="fragments/footer :: footer" />-->
-
-</div> <!-- /container -->
-
+    <div th:replace="fragments/footer :: footer" />
+</div>
 </body>
 </html>
