--- a/src/main/resources/templates/users/createUserForm.html
+++ b/src/main/resources/templates/users/createUserForm.html
@@ -10,7 +10,7 @@
 
 <div class="container">
     <div th:replace="fragments/bodyHeader :: bodyHeader" />
-    <form role="form" action="/users/new" th:object="${userForm}" method="post">
+    <form role="form" action="/users/new" th:object="${createUserForm}" method="post">
         <div class="form-group row">
             <div class="col-2">
                 <label th:for="username">사번</label>
