--- a/src/main/resources/templates/proposals/proposals.html
+++ b/src/main/resources/templates/proposals/proposals.html
@@ -32,7 +32,7 @@
                     <td th:text="${context.slideNumber}"></td>
                     <td th:text="${context.context}"></td>
                     <td>
-                        <a href="#" th:href="@{/proposals/{contextId} (contextId=${context.contextId})}" class="btn btn-primary" role="button">자세히보기</a>
+                        <a href="#" th:href="@{/slides/{slideId} (slideId=${context.slideId})}" class="btn btn-primary" role="button">자세히보기</a>
                     </td>
                 </tr>
                 </tbody>
